--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
     <string name="app_name">PetfinderApp</string>
     <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
+
     <string name="fragment_animals_list_label">PetFinder</string>
-    <string name="button__get_animals">Get list of animals</string>
+    <string-array name="pet_types">
+        <item>Dogs</item>
+        <item>Cats</item>
+    </string-array>
 </resources>
