--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,13 @@
     <string name="app_name">PetfinderApp</string>
     <string name="action_settings">Settings</string>
 
+    <string name="name">Name : %s</string>
+    <string name="gender">Gender : %s</string>
+    <string name="size">Size : %s</string>
+    <string name="breed">Breed : %s</string>
+    <string name="status">Status : %s</string>
+    <string name="distance">Distance : %s</string>
+
     <string name="fragment_animals_list_label">PetFinder</string>
     <string-array name="pet_types">
         <item>Dogs</item>
